// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo hqSucy"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo lesvOp"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo gprDP"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          dir="rtl"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-jveewi cuNMtv"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo eYLOkw"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="sc-jveewi jlDwJo"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo dUMdXf"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo foSkkU"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH fUIiCE"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
